dependencies and adapted build.xml file for on-disk queue
git-svn-id: http://ldspider.googlecode.com/svn/trunk@81 e43db140-ba3d-11de-8be4-e1425cda3908

--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,7 @@
       <zipfileset src="lib/httpcore-nio-4.0.1.jar"/>
       <zipfileset src="lib/httpmime-4.0.1.jar"/>
       <zipfileset src="lib/nxparser.jar"/>
+      <zipfileset src="lib/je-4.0.71.jar"/>
       <manifest>
 	<attribute name="Main-Class" value="com.ontologycentral.ldspider.Main"/>
       </manifest>
