--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,8 @@
 	<attribute name="Main-Class" value="com.ontologycentral.ldspider.Main"/>
       </manifest>
     </jar>
+
+    <jar jarfile="${dist}/${name}-${version}-lib.jar" basedir="bin"/>
   </target>
 		
   <target name="clean">
