--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="ldspider" basedir="." default="dist">
 <property name="name" value="ldspider"/>
-<property name="version" value="0.1dev"/>
+<property name="version" value="trunk"/>
 <property name="dist" value="dist"/>
   <path id="classpath">
     <fileset dir="lib">
@@ -32,7 +32,6 @@
       <zipfileset src="lib/httpcore-nio-4.0.1.jar"/>
       <zipfileset src="lib/httpmime-4.0.1.jar"/>
       <zipfileset src="lib/nxparser.jar"/>
-      <zipfileset src="lib/je-4.0.71.jar"/>
       <manifest>
 	<attribute name="Main-Class" value="com.ontologycentral.ldspider.Main"/>
       </manifest>
