added strategy to just download into archive files
git-svn-id: http://ldspider.googlecode.com/svn/trunk@255 e43db140-ba3d-11de-8be4-e1425cda3908

--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,7 @@
   <target name="dist" depends="prepare">
     <javac destdir="bin"
 	   srcdir="src"
+	   includeantruntime="false"
 	   includes="com/ontologycentral/ldspider/**,org/osjava/norbert/**,net/sourceforge/**"
            source="1.5" target="1.5">
       <classpath refid="classpath"/>
