updated to new nxparser version
git-svn-id: http://ldspider.googlecode.com/svn/trunk@257 e43db140-ba3d-11de-8be4-e1425cda3908

--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
   	
     <jar jarfile="${dist}/${name}-${version}.jar" basedir="bin">
       <zipfileset src="lib/commons-cli-1.2.jar"/>
+      <zipfileset src="lib/commons-logging-1.1.1.jar"/>
       <zipfileset src="lib/httpclient-4.0.1.jar"/>
       <zipfileset src="lib/httpcore-4.0.1.jar"/>
       <zipfileset src="lib/httpcore-nio-4.0.1.jar"/>
