updated nxparser, added content location uri to seen
git-svn-id: http://ldspider.googlecode.com/svn/trunk@262 e43db140-ba3d-11de-8be4-e1425cda3908

--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
       <zipfileset src="lib/httpcore-4.0.1.jar"/>
       <zipfileset src="lib/httpcore-nio-4.0.1.jar"/>
       <zipfileset src="lib/httpmime-4.0.1.jar"/>
-      <zipfileset src="lib/nxparser.jar"/>
+      <zipfileset src="lib/nxparser-lib.jar"/>
       <manifest>
 	<attribute name="Main-Class" value="com.ontologycentral.ldspider.Main"/>
       </manifest>
