added buffers, more debug info output
git-svn-id: http://ldspider.googlecode.com/svn/trunk@264 e43db140-ba3d-11de-8be4-e1425cda3908

--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="lib" path="lib/httpclient-4.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/httpmime-4.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/nxparser-lib.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
